--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ set(CMAKE_EXE_LINKER_FLAGS -lcriterion)
 set(CMAKE_C_FLAGS "${CMAKE_CXX_FLAGS} -ldl")
 set(lib_sources
         my_malloc.c
-        include/my_malloc.h)
+        include/my_malloc.h show_alloc_mem.c)
 
 add_library(my_malloc SHARED ${lib_sources})
 
